--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-.message {
-  color: rgb(60, 60, 228);
-}
 .card {
   height: 200px;
   width: 300px;
@@ -9,7 +6,9 @@
   margin: 0 auto;
   display: flex;
   justify-content: center;
-
+  h1 {
+    color: rgb(60, 60, 228);
+  }
   form {
     font-family: Georgia, "Times New Roman", Times, serif;
     display: flex;
@@ -23,8 +22,6 @@
     outline: none;
     padding: 5px;
     border-radius: 5px;
-    /* &::placeholder {
-    } */
   }
   button {
     align-self: flex-end;
@@ -33,5 +30,14 @@
     font-weight: 600;
     border: 2px solid rgb(60, 60, 228);
     border-radius: 5px;
+    &.disabled {
+      color: gray;
+      border: 2px solid gray;
+    }
   }
+}
+
+#warning {
+  color: red;
+  font-size: 12px;
 }
