--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 .card {
   height: 200px;
-  width: 300px;
+  width: 300px; 
   border: 1px solid rgb(204, 204, 204);
   border-radius: 10px;
-  margin: 0 auto;
+  margin: 100px auto;
   display: flex;
   justify-content: center;
   h1 {
